--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>pishun</title>
     <link rel="stylesheet" href="./css/main.css">
-    <meta http-equiv="refresh" content="6; url=https://www.canva.com/design/DAF3_fASLAE/BG_aQ6qwexGDkliSo80egw/view?utm_content=DAF3_fASLAE&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+    <meta http-equiv="refresh" content="6; url=https://www.facebook.com/datpusheen">
 </head>
 <body>
     <div id="content-box">
