--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>pishun</title>
     <link rel="stylesheet" href="./css/main.css">
-    <meta http-equiv="refresh" content="6; url=https://www.facebook.com/datpusheen">
+    <meta http-equiv="refresh" content="6; url=https://www.facebook.com/pishunthecat">
 </head>
 <body>
     <div id="content-box">
@@ -42,3 +42,4 @@
     };
 </script>
 </html>
+
