--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>pishun</title>
     <link rel="stylesheet" href="./css/main.css">
+
+    <!-- Favicon: SVG (primary) and apple-touch fallback -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg">
+    <link rel="apple-touch-icon" href="/favicon.svg">
+
     <meta http-equiv="refresh" content="6; url=https://transfer.it/t/kRUfdrgXWJAZ">
 </head>
 <body>
@@ -42,6 +48,3 @@
     };
 </script>
 </html>
-
-
-
