--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- Favicon: SVG (primary) and apple-touch fallback -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.svg">
-    <link rel="apple-touch-icon" href="/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.iso">
+    <link rel="apple-touch-icon" href="/favicon.iso">
 
     <meta http-equiv="refresh" content="6; url=https://transfer.it/t/kRUfdrgXWJAZ">
 </head>
@@ -48,3 +48,4 @@
     };
 </script>
 </html>
+
