--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="./css/main.css">
 
     <!-- Favicon: SVG (primary) and apple-touch fallback -->
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.iso">
-    <link rel="apple-touch-icon" href="/favicon.iso">
+    <link rel="icon" href="/favicon.ico" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
 
     <meta http-equiv="refresh" content="6; url=https://transfer.it/t/kRUfdrgXWJAZ">
 </head>
@@ -48,4 +48,5 @@
     };
 </script>
 </html>
+
 
