--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <title>pishun</title>
     <link rel="stylesheet" href="./css/main.css">
 
-    <!-- Favicon: SVG (primary) and apple-touch fallback -->
-    <link rel="icon" href="/favicon.ico" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <!-- Favicon (fix đúng chuẩn, không bị browser ignore) -->
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.ico">
 
-    <meta http-equiv="refresh" content="6; url=https://transfer.it/t/kRUfdrgXWJAZ">
+    <!-- Redirect sau 5 giây (khớp với countdown) -->
+    <meta http-equiv="refresh" content="5; url=https://transfer.it/t/kRUfdrgXWJAZ">
 </head>
+
 <body>
     <div id="content-box">
         Bạn sẽ được chuyển hướng sau <span id="time">5</span> giây.
     </div>
+
     <div id="centered-text">
         Đang chuyển hướng...
     </div>
+
     <div id="copyright">
         &copy; 2025 pishun
     </div>
 </body>
+
 <script>
-    function startTimer(duration, display) {
-        var timer = duration;
-        setInterval(function () {
-            var minutes = parseInt(timer / 60, 10);
-            var seconds = parseInt(timer % 60, 10);
+    let timer = 6;
+    const display = document.getElementById("time");
 
-            minutes = minutes < 10 ? "0" + minutes : minutes;
-            seconds = seconds < 10 ? seconds : seconds;
+    const interval = setInterval(() => {
+        timer--;
+        display.textContent = timer;
 
-            display.textContent = seconds;
-
-            if (--timer < 0) {
-                timer = duration;
-            }
-        }, 1000);
-    }
-
-    window.onload = function () {
-        var fiveMinutes = 5;
-        var display = document.querySelector('#time');
-        startTimer(fiveMinutes, display);
-    };
+        if (timer <= 0) {
+            clearInterval(interval);
+        }
+    }, 1000);
 </script>
 </html>
-
-
