--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <title>pishun</title>
     <link rel="stylesheet" href="./css/main.css">
 
-    <!-- Favicon (fix đúng chuẩn, không bị browser ignore) -->
+    <!-- Favicon chuẩn đa trình duyệt -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon.ico">
+
+    <!-- Apple / iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- Android / PWA -->
+    <link rel="manifest" href="/site.webmanifest">
+
 
     <!-- Redirect sau 5 giây (khớp với countdown) -->
     <meta http-equiv="refresh" content="5; url=https://transfer.it/t/kRUfdrgXWJAZ">
@@ -41,3 +49,4 @@
     }, 1000);
 </script>
 </html>
+
