--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <!-- Redirect sau 5 giây (khớp với countdown) -->
-    <meta http-equiv="refresh" content="5; url=https://transfer.it/t/kRUfdrgXWJAZ">
+    <meta http-equiv="refresh" content="5; url=https://www.facebook.com/pishunthecat/">
 </head>
 
 <body>
@@ -49,4 +49,5 @@
     }, 1000);
 </script>
 </html>
+
 
