--- a/english/index.html
+++ b/english/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <title>pishun</title>
     <link rel="stylesheet" href="../css/main.css">
-    <meta http-equiv="refresh" content="6; url=https://drive.google.com/drive/u/2/mobile/folders/1TNI3PQD08joH6NKyVfFGz_TN2pOH_no4?pli=1&sort=13&direction=a">
+
+    <!-- Favicon chuẩn đa trình duyệt -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico">
+
+    <!-- Apple / iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+
+    <!-- Android / PWA -->
+    <link rel="manifest" href="../site.webmanifest">
+
+
+    <!-- Redirect sau 5 giây (khớp với countdown) -->
+    <meta http-equiv="refresh" content="5; url=https://www.facebook.com/pishunthecat/">
 </head>
+
 <body>
     <div id="content-box">
         Bạn sẽ được chuyển hướng sau <span id="time">5</span> giây.
     </div>
+
     <div id="centered-text">
         Đang chuyển hướng...
     </div>
+
     <div id="copyright">
         &copy; 2025 pishun
     </div>
 </body>
+
 <script>
-    function startTimer(duration, display) {
-        var timer = duration;
-        setInterval(function () {
-            var minutes = parseInt(timer / 60, 10);
-            var seconds = parseInt(timer % 60, 10);
+    let timer = 6;
+    const display = document.getElementById("time");
 
-            minutes = minutes < 10 ? "0" + minutes : minutes;
-            seconds = seconds < 10 ? seconds : seconds;
+    const interval = setInterval(() => {
+        timer--;
+        display.textContent = timer;
 
-            display.textContent = seconds;
-
-            if (--timer < 0) {
-                timer = duration;
-            }
-        }, 1000);
-    }
-
-    window.onload = function () {
-        var fiveMinutes = 5;
-        var display = document.querySelector('#time');
-        startTimer(fiveMinutes, display);
-    };
+        if (timer <= 0) {
+            clearInterval(interval);
+        }
+    }, 1000);
 </script>
 </html>
+
