--- a/english/index.html
+++ b/english/index.html
@@ -18,7 +18,7 @@
 
 
     <!-- Redirect sau 5 giây (khớp với countdown) -->
-    <meta http-equiv="refresh" content="5; url=https://www.facebook.com/pishunthecat/">
+    <meta http-equiv="refresh" content="5; url=https://drive.google.com/drive/u/2/mobile/folders/1TNI3PQD08joH6NKyVfFGz_TN2pOH_no4?pli=1&sort=13&direction=a">
 </head>
 
 <body>
